# UmbralEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  Umbral.natvis  vcpkg-configuration.json  vcpkg.json
CMake/: CMakeLists.txt
CMake/Triplets/: arm64-osx-umbral.cmake  x64-linux-umbral.cmake  x64-windows-umbral.cmake
Engine/CoreLib/: CMakeLists.txt
Engine/CoreLib/Include/Containers/: Any.h  Array.h  Function.h  HashMap.h  HashTable.h  LinkedList.h  Optional.h  Pair.h  RingBuffer.h  Span.h  Stack.h  StaticArray.h  String.h  StringOrStringView.h  StringReference.h  StringView.h  Tuple.h  Variant.h
Engine/CoreLib/Include/Engine/: Assert.h  Cast.h  CommandLine.h  Console.h  CoreTypes.h  Error.h  Hashing.h  IntTypes.h  Logging.h  MiscMacros.h  Platform.h
Engine/CoreLib/Include/Graphics/: Color.h  HSV.h  Image.h  LinearColor.h
Engine/CoreLib/Include/HAL/: BinaryStreamReader.h  BinaryStreamWriter.h  DateTime.h  Directory.h  EventLoop.h  File.h  FileStream.h  FileSystem.h  Path.h  TextStreamWriter.h  TimePoint.h  TimeSpan.h  Timer.h
Engine/CoreLib/Include/Main/: Main.h
Engine/CoreLib/Include/Math/: Math.h  Matrix3.h  Matrix4.h  Point.h  Quaternion.h  Rectangle.h  Rotator.h  Size.h  Vector2.h  Vector3.h  Vector4.h
Engine/CoreLib/Include/Memory/: AlignedStorage.h  EnabledSharedFromThis.h  Memory.h  MemoryMacros.h  SharedPtr.h  SharedResourceBlock.h  SmallBufferStorage.h  UniquePtr.h  WeakPtr.h
Engine/CoreLib/Include/Meta/: ArrayTypeInfo.h  AttributeInfo.h  ClassInfo.h  EnumInfo.h  FunctionInfo.h  MetaAttributes.h  MetaMacros.h  PointerTypeInfo.h  PropertyInfo.h  StructInfo.h  SubclassOf.h  TypeInfo.h
Engine/CoreLib/Include/Misc/: AtExit.h  Badge.h  Base64.h  CString.h  DoOnce.h  EnumMacros.h  NumericBase.h  SourceLocation.h  StringBuilder.h  StringFormatting.h  StringParsing.h  Unicode.h  Version.h
Engine/CoreLib/Include/Regex/: Regex.h
Engine/CoreLib/Include/Templates/: AddressOf.h  AndNotOr.h  AssignIfTrue.h  BulkOperations.h  CharTraits.h  ComparisonTraits.h  Decay.h  Declval.h  EnableIf.h  Exchange.h  Fill.h  Forward.h  IntegerSequence.h  IntegralConstant.h  IsAbstract.h  IsArray.h  IsAssignable.h  IsBaseOf.h  IsCallable.h  IsChar.h  IsClass.h  IsConstVolatile.h  IsConstructible.h  IsConvertible.h  IsEnum.h  IsFloat.h  IsFunction.h  IsHashable.h  IsInt.h  IsMemberPointer.h  IsMetaType.h  IsObject.h  IsPOD.h  IsPointer.h  IsReference.h  IsSame.h  IsTypeComplete.h  IsUnion.h  IsVoid.h  IsZeroConstructible.h  (+11 more)
Engine/CoreLib/Include/Threading/: AsyncTask.h  LockGuard.h  Mutex.h  Promise.h  Thread.h
Engine/CoreLib/Source/Containers/: Any.cpp  InternalString.cpp  InternalString.h  String.cpp  StringOrStringView.cpp  StringReference.cpp  StringView.cpp
Engine/CoreLib/Source/Engine/: Assert.cpp  CommandLine.cpp  Console.cpp  Hashing.cpp  InternalLogging.cpp  InternalLogging.h  Internationalization.cpp  Internationalization.h  Logging.cpp
Engine/CoreLib/Source/Graphics/: Color.cpp  HSV.cpp  Image.cpp  LinearColor.cpp
Engine/CoreLib/Source/HAL/: BinaryStreamReader.cpp  BinaryStreamWriter.cpp  DateTime.cpp  Directory.cpp  EventLoop.cpp  File.cpp  FileStream.cpp  FileSystem.cpp  FileTask.cpp  FileTask.h  InternalPath.cpp  InternalPath.h  InternalTime.cpp  InternalTime.h  Path.cpp  TextStreamWriter.cpp  TimePoint.cpp  TimeSpan.cpp  Timer.cpp
Engine/CoreLib/Source/Main/: Main.cpp
Engine/CoreLib/Source/Math/: Math.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Rotator.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Engine/CoreLib/Source/Memory/: Memory.cpp  SmallBufferStorage.cpp
Engine/CoreLib/Source/Meta/: ArrayTypeInfo.cpp  AttributeInfo.cpp  ClassInfo.cpp  EnumInfo.cpp  FunctionInfo.cpp  PointerTypeInfo.cpp  PropertyInfo.cpp  StructInfo.cpp  TypeInfo.cpp
Engine/CoreLib/Source/Misc/: Base64.cpp  CString.cpp  (+8 more)
Engine/CoreLib/Tests/: AnyTests.cpp  ArrayTests.cpp  Base64Tests.cpp  FileTests.cpp  FunctionTests.cpp  HashMapTests.cpp  HashTableTests.cpp  InternationalizationTests.cpp  LargeTypes.cpp  LargeTypes.h  LinkedListTests.cpp  Main.cpp  MathTests.cpp  MemoryTests.cpp  MiscTests.cpp  PathTests.cpp  RegexTests.cpp  SharedPtrTests.cpp  StaticArrayTests.cpp  StringTests.cpp  ThreadTests.cpp  TupleTests.cpp  TypeTraitTests.cpp  UniquePtrTests.cpp  VariantTests.cpp
Engine/Engine/: CMakeLists.txt
Engine/Engine/Tests/: GoogleTestEngine.cpp  GoogleTestEngine.h  Main.cpp  MetaTests.cpp  MultipleObjectClasses.h
Engine/JsonLib/: CMakeLists.txt
Engine/JsonLib/Tests/: Main.cpp  ParseTests.cpp
Engine/ObjectLib/: CMakeLists.txt
Engine/ObjectLib/Tests/: MultipleObjectClasses.cpp  ObjectTests.cpp
Engine/ParseLib/: CMakeLists.txt
Engine/ParseLib/Tests/: ScannerTests.cpp
MetaTool/: CMakeLists.txt
MetaTool/Include/MetaTool/: AttributeInfo.h  ClassInfo.h  EnumInfo.h  EnumUtilities.h  FunctionInfo.h  PropertyInfo.h  StructInfo.h
MetaTool/Source/: Main.cpp
MetaTool/Source/MetaTool/: HeaderFileGenerator.cpp  HeaderFileGenerator.h  HeaderFileParser.cpp  HeaderFileParser.h  MetaMacroNames.h  PropertyInfo.cpp  SourceFileGenerator.cpp  SourceFileGenerator.h  StructInfo.cpp
Projects/Bocks/: CMakeLists.txt
Projects/Bocks/Source/: Main.cpp
Projects/Lox/: CMakeLists.txt  Lox.bnf
Projects/Lox/Source/: Expressions.cpp  Main.cpp  Parser.cpp  Scanner.cpp  Scope.cpp  SourceLocation.cpp  Statements.cpp  Token.cpp  Value.cpp
ShaderCompiler/: CMakeLists.txt
ShaderCompiler/CMake/: UmbralCompileShaders.cmake
ShaderCompiler/Include/USL/: Conversion.h
ShaderCompiler/Include/shaderc_util/: args.h  counting_includer.h  message.h  shader_stage.h  spirv_tools_wrapper.h  string_piece.h
ShaderCompiler/Source/USL/: Conversion.cpp
ShaderCompiler/Source/glslc/: dependency_info.cpp  file.h  file_compiler.cpp  file_compiler.h  file_includer.cpp  file_includer.h  main.cpp  resource_parse.cpp  shader_stage.h
ShaderCompiler/Source/shaderc/: shaderc.cpp  shaderc_private.h
ShaderCompiler/Source/shaderc_util/: args.cpp  compiler.cpp  file_finder.cpp  io_shaderc.cpp  message.cpp  resources.cpp  shader_stage.cpp  spirv_tools_wrapper.cpp  version_profile.cpp
(+259 files in other folders)
